tests/fixtures/invalid/pow_none_none_bytes.py
# Cannot call pow() with None, None, Bytes
x = pow(None, None, b"hello")
